# forestclaw

./: .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci_automake.yml  ci_cmake.yml  ci_fetch_content.yml  doxygen.yml
applications/: CMakeLists.txt  hash_regression_output.py
applications/clawpack/: claw3.apps  claw3.cmake  clawpack.apps  clawpack.cmake
applications/clawpack/advection/3d/periodic/: CMakeLists.txt  Makefile.am  afterframe.m  fclaw_options.ini  fdisc.f90  periodic.cpp  periodic_options.c  periodic_user.cpp  periodic_user.h  read_vars.m  regression.ini  regression_values_0.csv  regressions.sh  setplot3.m  setprob.f90  write_regions.py
applications/clawpack/advection/3d/periodic/user_4.6/: periodic_qinit.f90
applications/clawpack/shallow/2d/sphere/: CMakeLists.txt  Makefile.am  afterframe.m  bmount.f  bmount.f90  fclaw_options.ini  fdisc.f90  map1d.m  mapc2m.m  nondim.m  read_vars.m  regression.ini  regression_values_0.csv  regression_values_1.csv  regressions.sh  ridge.ini  setplot2.m  setprob.f90  sphere.cpp  sphere_1d.m  sphere_exceeds_threshold.f90  sphere_options.c  sphere_user.cpp  sphere_user.h
applications/clawpack/shallow/2d/sphere/1d_latitude/: Makefile  flat.txt  qinit.f90  setrun.py
applications/clawpack/shallow/2d/sphere/1d_latitude/_reference/: claw.data  fort.a0000  fort.geo  fort.info  fort.q0000  fort.q0001  fort.q0002  fort.q0003  fort.q0004  fort.t0000  fort.t0001  fort.t0002  fort.t0003  fort.t0004  gauges.data  geoclaw.data  grid.data  setprob.data  topo.data
applications/clawpack/shallow/2d/sphere/1d_ridge/: Makefile  bmount.f90  qinit.f90  setaux.f90  setplot.py  setrun.py  src1_geoclaw.f90
applications/clawpack/shallow/2d/sphere/user_4.6/: rpn2cons_update_manifold.f  rpn2swsphere.f90  rpn2swsphere_fwave.f90  rpt2swq.f90  rpt2swq_fwave.f90  sphere_b4step2.f90  sphere_gaussian.f90  sphere_qinit.f90  sphere_setaux.f90  sphere_src2.f90
applications/clawpack/shallow/2d/sphere/user_5.0/: rpn2swsphere.f90  rpn2swsphere_fwave.f90  rpt2swq.f90  rpt2swq_fwave.f90  sphere_b4step2.f90  sphere_gaussian.f90  sphere_output_ascii_fort.f  sphere_qinit.f90  sphere_setaux.f90  sphere_src2.f90
applications/demo/: demo.apps  demo.cmake
applications/demo/2d/filament_swirl/: CMakeLists.txt  Makefile.am  filament_swirl_split.cpp  regressions.sh  user_run.c
applications/demo/2d/filament_swirl/filament/: filament_regression_values_0.csv
applications/demo/2d/filament_swirl/swirl/: swirl_regression_values_0.csv
applications/demo/2d/partitioning/: CMakeLists.txt  Makefile.am  partitioning.cpp
applications/demo/2d/swirl_rays/: CMakeLists.txt  Makefile.am  regressions.sh
applications/elliptic/allencahn/: allencahn.cpp  allencahn_options.c  allencahn_user.cpp  regression_values_0.csv
applications/elliptic/heat/: CMakeLists.txt  heat.cpp  heat_options.c  heat_user.cpp  regression_values_0.csv
applications/elliptic/heat_phasefield/: CMakeLists.txt  heat_phasefield.cpp
applications/elliptic/phasefield/: phasefield.cpp  phasefield_operator.cpp  phasefield_options.c  phasefield_user.cpp  regression_values_0.csv
applications/elliptic/poisson/: poisson.cpp  poisson_options.c  poisson_user.h  regression_values_0.csv
applications/geoclaw/: geoclaw.cmake
applications/geoclaw/bowl_radial/: afterframe.m  bathy.m  bowl.cpp  fclaw_options.ini  setrun.py
applications/geoclaw/bowl_radial_slosh/: bowl.cpp  fclaw_options.ini  regression.ini
applications/geoclaw/bowl_slosh/: slosh.cpp  slosh_options.c
applications/geoclaw/chile2010/: chile2010.cpp  fclaw_options.ini  maketopo.py  setrun.py
applications/geoclaw/teton/: teton.cpp
applications/geoclaw/tohoku/: tohoku.cpp
applications/no_solver/: no_solver.cpp  no_solver_options.c
applications/paper/annulus/: annulus.cpp  annulus_options.c
applications/paper/cylinder/: cylinder.cpp  cylinder_options.c
applications/paper/sphere/: sphere.cpp  sphere_options.c
applications/paper/square/: square.cpp  square_options.c
applications/paper/torus/: torus.cpp  torus_options.c
applications/paper/torus_conservation/: torus.cpp  torus_options.c
cmake/: compilers.cmake  config.cmake  config.cmake.in  hdf5.cmake  libraries.json  options.cmake
cmake/Modules/: FindHDF5.cmake
matlab/: mapc2m_pillowsphere.m
scripts/: update_regressions.py
src/: CMakeLists.txt  Makefile.am  _fclaw2d_to_fclaw3d.h  _fclaw2d_to_fclaw3dx.h  _fclaw3dx_to_fclaw3d.h  fclaw2d_convenience.c  fclaw2d_diagnostics.c  fclaw2d_farraybox.hpp  fclaw2d_global.c  fclaw2d_global.h  fclaw2d_map.c  fclaw2d_map.h  fclaw2d_options.c  fclaw2d_output.c  fclaw2d_output.cpp  fclaw2d_to_3d.h  fclaw2d_wrap.c  fclaw2d_wrap.h  fclaw3d_diagnostics.c  fclaw3d_diagnostics.h  fclaw3d_global.h  fclaw3d_output.c  fclaw3d_output.h  fclaw3d_time_sync.h  fclaw3d_timeinterp.h  fclaw3d_vtable.c  fclaw3d_vtable.h  fclaw3d_wrap.h  fclaw_base.c  fclaw_base.h  fclaw_context.c  fclaw_context.h  fclaw_context.h.TEST.cpp  fclaw_convenience.c  fclaw_corner_neighbors.c  fclaw_diagnostics.c  fclaw_diagnostics.h  fclaw_diagnostics.h.TEST.cpp  fclaw_elliptic_solver.c  fclaw_elliptic_solver.h.TEST.cpp  (+43 more)
src/patches/clawpatch/: CMakeLists.txt  Makefile.am  fclaw2d_clawpatch_fort.h.TEST.cpp  fclaw2d_clawpatch_options.c  fclaw_clawpatch.cpp  fclaw_clawpatch.h.2d.TEST.cpp  fclaw_clawpatch.h.3d.TEST.cpp  fclaw_clawpatch.h.3d.average.TEST.cpp  fclaw_clawpatch.h.3d.ghostfill.TEST.cpp  fclaw_clawpatch.h.3d.interpolate.TEST.cpp  fclaw_clawpatch.h.3dx.TEST.cpp  fclaw_clawpatch_diagnostics.h.TEST.cpp  fclaw_clawpatch_options.c  fclaw_clawpatch_options.h  fclaw_clawpatch_options.h.TEST.cpp  fclaw_clawpatch_output_hdf5.c  fclaw_clawpatch_pillow.c  fclaw_clawpatch_regions.c  fclaw_clawpatch_regions.h
src/patches/metric/: fclaw2d_metric.cpp  fclaw2d_metric.h.TEST.cpp  fclaw3d_metric.cpp  fclaw3d_metric.h  fclaw3d_metric_default_fort.h  fclaw3dx_metric.h  fclaw3dx_metric.hpp  fclaw3dx_metric_default.c  fclaw3dx_metric_default_fort.h
src/solvers/fc2d_clawpack4.6/: CMakeLists.txt  Makefile.am  clawpack46_user_fort.h  (+7 more)
test/: test.cpp  test.hpp
(+397 files in other folders)
